Fix anime table spacing

--- a/resources/css/reviews.css
+++ b/resources/css/reviews.css
@@ -118,6 +118,7 @@
     background: #666;
     border-collapse: collapse;
     color: white;
+    margin-top: 2rem;
 }
 
 .reviews-content .anime-table td,
